"Enviando o Projeto para o GitHub"

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+#Project files
+.appsettings.Development.json
+.appsettings.json
+
 # User-specific files
 *.rsuser
 *.suo
@@ -396,3 +400,5 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+appsettings.Development.json
+appsettings.json
