--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConexaoPadrao": "",
-    "SAConnectionString": "",
-    "AzureTableName": "FuncionarioLog"
+    "SqlServerConnection": "",
+    "SAConnection": "",
+    "SATableName": "FuncionarioLog"
   }
 }
